Bug concertado na insercao do Livro

--- a/LivrariaMendes/src/LivrariaMendes/Views/Livroes/Create.cshtml
+++ b/LivrariaMendes/src/LivrariaMendes/Views/Livroes/Create.cshtml
@@ -40,10 +40,10 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Autor" class="col-md-2 control-label"></label>
+            <label asp-for="IdAutor" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <select asp-for="Autor" asp-items="ViewBag.Autor" class="form-control"></select>
-                <span asp-validation-for="Autor" class="text-danger" />
+                <select asp-for="IdAutor" asp-items="ViewBag.Autor" class="form-control"></select>
+                <span asp-validation-for="IdAutor" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
