--- a/LivrariaMendes/src/LivrariaMendes/Views/Autors/Delete.cshtml
+++ b/LivrariaMendes/src/LivrariaMendes/Views/Autors/Delete.cshtml
@@ -1,34 +1,20 @@
 @model LivrariaMendes.Models.Autor
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Excluir";
 }
 
-<h2>Delete</h2>
+<h2>Excluir</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Deseja realmente excluir o Autor "@Html.DisplayFor(model => model.Nome) @Html.DisplayFor(model => model.SobreNome)"?</h3>
 <div>
-    <h4>Autor</h4>
+ 
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.SobreNome)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.SobreNome)
-        </dd>
-    </dl>
-    
+   
     <form asp-action="Delete">
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            <a asp-action="Index">Back to List</a>
+            <input type="submit" value="Excluir" class="btn btn-danger" />
+            <a asp-action="Index" class="btn btn-default">Listar</a>
         </div>
     </form>
 </div>
