--- a/LivrariaMendes/src/LivrariaMendes/Views/Autors/Details.cshtml
+++ b/LivrariaMendes/src/LivrariaMendes/Views/Autors/Details.cshtml
@@ -1,10 +1,10 @@
 @model LivrariaMendes.Models.Autor
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
     <h4>Autor</h4>
