--- a/LivrariaMendes/src/LivrariaMendes/Views/Home/Contact.cshtml
+++ b/LivrariaMendes/src/LivrariaMendes/Views/Home/Contact.cshtml
@@ -1,17 +1,15 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contato";
 }
 <h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    
+    <b>(11) 96359-4085</b><br />
+
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Email:</strong> <a href="felipemendesara123@gmail.com">felipemendesara123@gmail.com</a><br />
+    <strong>GITHUB:</strong> <a href="https://github.com/felipemendesara">https://github.com/felipemendesara</a>
 </address>
