--- a/LivrariaMendes/src/LivrariaMendes/Views/Shared/_Layout.cshtml
+++ b/LivrariaMendes/src/LivrariaMendes/Views/Shared/_Layout.cshtml
@@ -27,10 +27,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+            
                 <a asp-controller="Home" asp-action="Index" class="navbar-brand">Livraria Mendes</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+@if (User.Identity.IsAuthenticated)
+{
                     <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -44,11 +47,14 @@
                     </li>
 
                     <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
+}
+                  </ul>
+               
                 @await Html.PartialAsync("_LoginPartial")
             </div>
         </div>
     </div>
+               
     <div class="container body-content">
         @RenderBody()
         <hr />
