Comeco do Dev do Google Maps no sistema

--- a/LivrariaMendes/src/LivrariaMendes/Views/Autors/Index.cshtml
+++ b/LivrariaMendes/src/LivrariaMendes/Views/Autors/Index.cshtml
@@ -19,7 +19,7 @@
         </th>
         <th></th>
     </tr>
-
+    <a asp-action="Maps" asp-route-id="" class="btn btn-info">MAPS</a>
 @foreach (var item in Model) {
     <tr>
         <td>
