--- a/LivrariaMendes/src/LivrariaMendes/Views/Shared/_Layout.cshtml
+++ b/LivrariaMendes/src/LivrariaMendes/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Livraria Mendes</title>
-
+    <script src="~/lib/jquery/dist/jquery.js"></script>
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
@@ -43,10 +43,12 @@
                         <ul class="dropdown-menu">
                             <li><a asp-controller="Autors" asp-action="Index">Autores</a></li>
                             <li><a asp-controller="Livroes" asp-action="Index">Livros</a></li>
+                            <li><a asp-controller="Livrarias" asp-action="Index">Livrarias</a></li>
                         </ul>
                     </li>
 
                     <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
+
 }
                   </ul>
                
@@ -64,7 +66,7 @@
     </div>
 
     <environment names="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
+        @*<script src="~/lib/jquery/dist/jquery.js"></script>*@
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
